fixed skill set width issues

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="main container">
     <div class="row">
       <div class="col-sm-1"></div>
-      <div class="col-sm-4">
+      <section id="education" class="col-sm-4">
         <h2>Education</h2>
         <ul>
           <li>
@@ -56,11 +56,11 @@
             <p>Security+ Certified, July 2011</p>
           </li>
         </ul>
-      </div>
-      
-      <div class="col-sm-6">
+      </section>
+      <section id="skills" class="col-sm-6 col-xs-8">
         <h2>Skill Set</h2>
         <div class="row">
+          <div class="col-sm-6">
           <div class="col-sm-6">
             <table id="application-table">
               <tr><td class="skill-category" colspan="2"><strong>Application and Systems Development</strong></td></tr>
@@ -174,12 +174,12 @@
             </table>
           </div>
         </div>
-      </div>
+      </section>
       <div class="col-sm-1"></div>
     </div>
     <div class="row">
       <div class="col-sm-1"></div>
-      <div id="jobs" class="col-sm-4">
+      <section id="jobs" class="col-sm-4">
         <h2>Jobs</h2>
         <ul>
           <li>
@@ -213,8 +213,8 @@
             </ul>
           </li>
         </ul>
-      </div>
-      <div class="col-sm-6">
+      </section>
+      <section class="col-sm-6">
         <h2>Side Projects</h2>
         <ul>
           <li>
@@ -233,7 +233,7 @@
             <p><a href="http://kenbellows.github.io/music-web-demos/week1/">Live Page</a></p>
           </li>
         </ul>
-      </div>
+      </section>
       <div class="col-sm-1"></div>
     </div>
     <!--
