removed Ruby job item (too insignificant, and it took up too much room) and reordered the bottom row

--- a/index-alt2.html
+++ b/index-alt2.html
@@ -177,7 +177,7 @@
     </div>
     <div class="row">
       <div class="col-sm-1"></div>
-      <section id="side-projects" class="col-sm-4">
+      <section class="col-sm-4">
         <h2>Side Projects</h2>
         <ul>
           <li>
@@ -221,6 +221,10 @@
                 <p>Wrote a Perl script to process application logs and prosent collected data in a human readable format.</p>
               </li>
               <li>
+                <strong>January 2013 <span class="faded">(Ruby)</span></strong>
+                <p>Wrote a Ruby script to analyze unit test scripts for code coverage and accuracy, automating a previously labor intensive process.</p>
+              </li>
+              <li>
                 <strong>January 2013-March 2013 <span class="faded">(x86, C, Python)</span></strong>
                 <p>Currently working with distributed, high-availability embedded systems using x86 Assembly, C, and Python.</p>
               </li>
@@ -228,6 +232,7 @@
           </li>
         </ul>
       </section>
+      
       <div class="col-sm-1"></div>
     </div>
     <!--
