--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <section id="education" class="col-sm-4">
+      <section id="education" class="col-sm-4 col-xs-12">
         <h2>Education</h2>
         <ul>
           <li>
