adjusted page title; removed alt pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="data-width=device-width, initial-scale=1">
-  <title>Ken Bellows</title>
+  <title>Ken Bellows: Web & Software Developer</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <link href='http://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:400,700' rel='stylesheet' type='text/css'>
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <section id="education" class="col-sm-4 col-xs-12">
+      <section id="education" class="col-sm-4 col-xs-12 ">
         <h2>Education</h2>
         <ul>
           <li>
@@ -230,19 +230,6 @@
       </section>
       <div class="col-sm-1"></div>
     </div>
-    <!--
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <h2>Highlights</h2>
-        
-        <h4>Automated Test Review Scripts</h4>
-        <p>When tasked to review 120 unit test scripts written by coworkers for code path coverage and accuracy, I recognized an opportunity to automate.
-           Using Ruby, I wrote a script to automate the process of comparing all tested code paths to the possible paths.</p>
-      </div>
-      <div class="col-sm-1"></div>
-    </div>
-    -->
   </div>
   
 </body>
