Removed https and http prefixes from URLs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Ken Bellows: Web & Software Developer</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
-  <link href='http://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:400,700' rel='stylesheet' type='text/css'>
-  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <link href='//fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:400,700' rel='stylesheet' type='text/css'>
+  <script src="//code.jquery.com/jquery.min.js"></script>
   <script>
     $(function(){
       $("span.progress-bar").each(function() {
@@ -34,7 +34,7 @@
   </div>
   <div class="main container">
     <div class="row">
-      <div class="col-sm-1"></div>
+      <div class="col-md-1"></div>
       <section id="education" class="col-sm-4 col-xs-12 ">
         <h2>Education</h2>
         <ul>
@@ -173,27 +173,26 @@
           </div>
         </div>
       </section>
-      <div class="col-sm-1"></div>
     </div>
     <div class="row">
-      <div class="col-sm-1"></div>
+      <div class="col-md-1"></div>
       <section id="side-projects" class="col-sm-4">
         <h2>Side Projects</h2>
         <ul>
           <li>
             <h4>PacketKnife <span class="faded">(Python)</span></h4>
             <p>An interactive packet inspection tool designed to detect and extract passwords and session tokens sent in plaintext.</p>
-            <p><a href="https://github.com/kenbellows/packet-knife">GitHub</a></p>
+            <p><a href="//github.com/kenbellows/packet-knife">GitHub</a></p>
           </li>
           <li>
             <h4>Book <span class="faded">(Ruby)</span></h4>
             <p>A Ruby domain-specific-language and script to compile text files into a book.</p>
-            <p><a href="https://github.com/kenbellows/book">GitHub</a></p>
+            <p><a href="//github.com/kenbellows/book">GitHub</a></p>
           </li>
           <li>
             <h4>Amplitude and Frequency <span class="faded">(HTML5, CSS3, JavaScript, HTML5 Web Audio API, Bootstrap)</span></h4>
             <p>An educational page explaining Amplitude and Frequency of sound waves. The most important thing here is the <strong>Web Audio API-based demo at the bottom</strong>.</p>
-            <p><a href="http://kenbellows.github.io/music-web-demos/week1/">Live Page</a></p>
+            <p><a href="//kenbellows.github.io/music-web-demos/week1/">Live Page</a></p>
           </li>
         </ul>
       </section>
@@ -228,7 +227,6 @@
           </li>
         </ul>
       </section>
-      <div class="col-sm-1"></div>
     </div>
   </div>
   
