backed up index.html in index.old.html for live reference and started rewriting in modern semantic HTML with CSS Grid for the layout

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="data-width=device-width, initial-scale=1">
   <title>Ken Bellows: Web & Software Developer</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <link href='//fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:400,700' rel='stylesheet' type='text/css'>
   <script src="//code.jquery.com/jquery.min.js"></script>
-  <script>
+  <!--script>
     $(function(){
       $("span.progress-bar").each(function() {
         $(this).animate({
@@ -16,236 +15,29 @@
         });
       });
     });
-  </script>
+  </script-->
 </head>
 
 <body>
-  <div class="header container">
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <h1>Ken Bellows</h1>
-        <div class="header-small">
-          <p>Web & Software Developer</p>
-        </div>
-      </div>
-      <div class="col-sm-1"></div>
-    </div>
-  </div>
-  <div class="main container">
-    <div class="row">
-      <div class="col-md-1"></div>
-      <section id="education" class="col-sm-4 col-xs-12 ">
-        <h2>Education</h2>
-        <ul>
-          <!--li>
-            <h4>Johns Hopkins University</h4>
-            <p>MS Computer Science, Currently Enrolled</p>
-          </li-->
-          <li>
-            <h4>Rensselaer Polytechnic Institute, Troy, NY</h4>
-            <p>BS Computer Science, May 2012</p>
-          </li>
-          <li>
-            <h4>EC-Council</h4>
-            <p>Certified Ethical Hacker, January 2013</p>
-          </li>
-          <li>
-            <h4>CompTIA</h4>
-            <p>Security+ Certified, July 2011</p>
-          </li>
-        </ul>
-      </section>
-      <section id="skills" class="col-sm-6 col-xs-10">
-        <h2>Skill Set</h2>
-        <div class="row">
-          <div class="col-sm-6">
-            <table id="web-table">
-              <tr><td class="skill-category" colspan="2"><strong>Web (Client-Side)</strong></td></tr>
-              <tr>
-                <td>JavaScript (pure)</td>
-                <td><span class="progress-bar" data-width="100"></span></td>
-              </tr>
-              <tr>
-                <td>HTML4/5</td>
-                <td><span class="progress-bar" data-width="100"></span></td>
-              </tr>
-              <tr>
-                <td>CSS2/3</td>
-                <td><span class="progress-bar" data-width="100"></span></td>
-              </tr>
-              <tr>
-                <td>Bootstrap 3</td>
-                <td><span class="progress-bar" data-width="60"></span></td>
-              </tr>
-              <tr>
-                <td>AJAX</td>
-                <td><span class="progress-bar" data-width="90"></span></td>
-              </tr>
-              <tr>
-                <td>jQuery</td>
-                <td><span class="progress-bar" data-width="80"></span></td>
-              </tr>
-              <tr>
-                <td>HTML5 Canvas</td>
-                <td><span class="progress-bar" data-width="40"></span></td>
-              </tr>
-            
-              <tr><td class="skill-category" colspan="2"><strong>Web (Server-Side)</strong></td></tr>
-              <tr>
-                <td>Django</td>
-                <td><span class="progress-bar" data-width="30"></span></td>
-              </tr>
-              <tr>
-                <td>Ruby on Rails</td>
-                <td><span class="progress-bar" data-width="30"></span></td>
-              </tr>
-              <tr>
-                <td>SpringMVC</td>
-                <td><span class="progress-bar" data-width="50"></span></td>
-              </tr>
-              <tr>
-                <td>SQL (MySQL, PostgreSQL)</td>
-                <td><span class="progress-bar" data-width="60"></span></td>
-              </tr>
-              <tr>
-                <td>Java Servlets</td>
-                <td><span class="progress-bar" data-width="30"></span></td>
-              </tr>
-              <tr>
-                <td>JSP</td>
-                <td><span class="progress-bar" data-width="40"></span></td>
-              </tr>
-              <tr>
-                <td>REST Theory</td>
-                <td><span class="progress-bar" data-width="75"></span></td>
-              </tr>
-            </table>
-          </div>
-          <div class="col-sm-6">
-            <table id="application-table">
-              <tr><td class="skill-category" colspan="2"><strong>Application and Systems Development</strong></td></tr>
-              <tr>
-                <td>Java</td>
-                <td><span class="progress-bar" data-width="75"></span></td>
-              </tr>
-              <tr>
-                <td>C/C++</td>
-                <td><span class="progress-bar" data-width="30"></span></td>
-              </tr>
-              <tr>
-                <td>x86 Assembly</td>
-                <td><span class="progress-bar" data-width="15"></span></td>
-              </tr>
-              
-              <tr><td class="skill-category" colspan="2"><strong>Scripting</strong></td></tr>
-              <tr>
-                <td>Python</td>
-                <td><span class="progress-bar" data-width="100"></span></td>
-              </tr>
-              <tr>
-                <td>Node JS</td>
-                <td><span class="progress-bar" data-width="60"></span></td>
-              </tr>
-              <tr>
-                <td>Ruby</td>
-                <td><span class="progress-bar" data-width="50"></span></td>
-              </tr>
-              <tr>
-                <td>Perl</td>
-                <td><span class="progress-bar" data-width="40"></span></td>
-              </tr>              
+  <header>
+    <h1>Ken Bellows</h1>
+    <h2>Web & Software Developer</h2>
+  </header>
 
-              <tr><td class="skill-category" colspan="2"><strong>Miscellaneous</strong></td></tr>
-              <tr>
-                <td>JSON</td>
-                <td><span class="progress-bar" data-width="100"></span></td>
-              </tr>
-              <tr>
-                <td>XML</td>
-                <td><span class="progress-bar" data-width="75"></span></td>
-              </tr>
-              <tr>
-                <td>Vi[m]</td>
-                <td><span class="progress-bar" data-width="90"></span></td>
-              </tr>
-              <tr>
-                <td>Eclipse</td>
-                <td><span class="progress-bar" data-width="75"></span></td>
-              </tr>
-              <tr>
-                <td>Bash</td>
-                <td><span class="progress-bar" data-width="80"></span></td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </section>
-    </div>
-    <div class="row">
-      <div class="col-md-1"></div>
-      <section id="side-projects" class="col-sm-4">
-        <h2>Side Projects</h2>
-        <ul>
-          <li>
-            <h4>PacketKnife <span class="faded">(Python)</span></h4>
-            <p>An interactive packet inspection tool designed to detect and extract passwords and session tokens sent in plaintext.</p>
-            <p><a href="//github.com/kenbellows/packet-knife">GitHub</a></p>
-          </li>
-          <li>
-            <h4>Book <span class="faded">(Ruby)</span></h4>
-            <p>A Ruby domain-specific-language and script to compile text files into a book.</p>
-            <p><a href="//github.com/kenbellows/book">GitHub</a></p>
-          </li>
-          <li>
-            <h4>Amplitude and Frequency <span class="faded">(HTML5, CSS3, JavaScript, HTML5 Web Audio API, Bootstrap)</span></h4>
-            <p>An educational page explaining Amplitude and Frequency of sound waves. The most important thing here is the <strong>Web Audio API-based demo at the bottom</strong>.</p>
-            <p><a href="//kenbellows.github.io/music-web-demos/week1/">Live Page</a></p>
-          </li>
-        </ul>
-      </section>
-      <section id="jobs" class="col-sm-6">
-        <h2>Jobs</h2>
-        <ul>
-          <li>
-            <h4>Leidos</h4>
-            <p>Web/Software Developer, January 2015-present</p>
-            <ul>
-              <li>
-                <strong>January 2015-preset <span class="faded">(JavaScript, AngularJS, Bootstrap, Java, SpringMVC, REST)</span></strong>
-                <p>Full-stack web development. Angular single-page-application frontend, SpringMVC backend.</p>
-              </li>
-            </ul>
-          </li><li>
-            <h4>Booz Allen Hamilton, Inc.</h4>
-            <p>Consultant - June 2012-January 2015</p>
-            <ul>
-              <li>
-                <strong>June 2012-January 2013 <span class="faded">(Java, SpringMVC, REST Services, XML)</span></strong>
-                <p>Wrote a REST service to retrieve data from a legacy MySQL database.</p>
-              </li>
-              <li>
-                <strong>January 2013-October 2013 <span class="faded">(Python, MySQL, XML)</span></strong>
-                <p>Wrote a Python application to export data from a MySQL database and coerce it into XML documents following a standard.</p>
-              </li>
-              <li>
-                <strong>July 2013-October 2013 <span class="faded">(HTML/CSS/JavaScript, jQuery, AJAX, Python, Django, REST Services)</span></strong>
-                <p>Wrote a web application to assist non-programmers with creating queries for a REST service.</p>
-              </li>
-              <li>
-                <strong>November 2013-December 2013 <span class="faded">(Perl)</span></strong>
-                <p>Wrote a Perl script to process application logs and prosent collected data in a human readable format.</p>
-              </li>
-              <li>
-                <strong>January 2013-March 2013 <span class="faded">(x86, C, Python)</span></strong>
-                <p>Currently working with distributed, high-availability embedded systems using x86 Assembly, C, and Python.</p>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-    </div>
-  </div>
+  <section id="education">
+    <h3>Education</h3>
+  </section>
   
+  <section id="skills">
+    <h3>Skill Set</h3>
+  </section>
+  
+  <section id="side-projects">
+    <h3>Side Projects</h3>
+  </section>
+
+  <section id="jobs">
+    <h3>Jobs</h3>
+  </section>
 </body>
 </html>
