--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>
     <h1>Hi, I'm <mark id="name">Ken Bellows</mark> and I make websites.</h1>
+    <img id="face" src="ken.png">
   </header>
 
   <section class="category" id="skills">
