--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
 <body>
   <header>
-    <h1>Hi, I'm <mark id="name">Ken Bellows</mark> and I make websites.</h1>
-    <img id="face" src="ken.png">
+      <img id="face" src="ken.png">
+      <h1>
+        <span class=top>Hi, I'm</span>
+        <mark id="name">Ken Bellows</mark>
+        <span class="bottom">and I make websites.</span>
+      </h1>
   </header>
 
   <section class="category" id="skills">
@@ -27,17 +31,52 @@
 
   <section class="category" id="articles">
     <h3>Things I've written</h3>
+    <a class="article-card" target="_blank" href="https://dev.to/kenbellows/stop-using-so-many-divs-an-intro-to-semantic-html-3i9i">
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>Stop using so many divs! An intro to semantic HTML</h3>
+      <p class="summary">
+        Sure, divs are great and all, but they give no information about their
+        purpose within the document structure. HTML5 has been around for a
+        while now, and there are better options.
+      </p>
+    </a>
+    <a class="article-card" target="_blank" href="https://dev.to/kenbellows/how-streams-can-simplify-your-life-2nka">
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" width="20%" height="20%" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>How streams can simplify your life</h3>
+      <p class="summary">
+          An introduction to streams and the Observer Pattern, what problems
+          they address, how they work, and why you might care.
+      </p>
+    </a>
     <a class="article-card" target="_blank" href="https://dev.to/kenbellows/gradians-and-turns-the-quiet-heroes-of-css-angles-7ia">
-        <h3>Gradians and Turns: the quiet heroes of CSS angles</h3>
-        <p class="summary"></p>
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" width="20%" height="20%" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>Gradians and Turns: the quiet heroes of CSS angles</h3>
+      <p class="summary">
+        Degrees and radians are the angle units we all know and hate, but two
+        lesser-known units are often much easier: turns and gradians!
+      </p>
     </a>
     <a class="article-card" target="_blank" href="https://dev.to/kenbellows/why-we-need-css-subgrid-53mh">
-        <h3>Why we need CSS subgrid</h3>
-        <p class="summary"></p>
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" width="20%" height="20%" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>Why we need CSS subgrid</h3>
+      <p class="summary">
+        The CSS Grid spec is amazing, but there's still a gap to be filled by
+        <tt>subgrid</tt>.
+      </p>
     </a>
     <a class="article-card" target="_blank" href="https://dev.to/kenbellows/css-grid-areas-are-amazing-1gha">
-        <h3>CSS Grid Areas are amazing</h3>
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" width="20%" height="20%" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>CSS Grid Areas are amazing</h3>
         <p class="summary"></p>
+    </a>
+    <a class="article-card" target="_blank" href="https://dev.to/kenbellows/the-javascript-iteration-protocols-and-how-they-fit-in-1g8i">
+      <svg xmlns="http://www.w3.org/2000/svg" class="logo dev-logo" version="1" width="20%" height="20%" viewBox="0 0 132.000000 65.000000" class="logo"><path d="M0 33v32h11.3c12.5 0 17.7-1.6 21.5-6.5 3.8-4.8 4.4-9 4-28-.3-16.8-.5-18.2-2.7-21.8C30.3 2.5 26.1 1 12 1H0v32zm23.1-19.1c2.3 1.9 2.4 2.3 2.4 18.5 0 15.7-.1 16.7-2.2 18.8-1.7 1.6-3.5 2.2-7 2.2l-4.8.1-.3-20.8L11 12h4.9c3.3 0 5.6.6 7.2 1.9zM46.1 3.6c-2 2.6-2.1 3.9-2.1 29.6v26.9l2.5 2.4c2.3 2.4 2.9 2.5 16 2.5H76V54.1l-10.2-.3-10.3-.3v-15l6.3-.3 6.2-.3V27H55V12h21V1H62.1c-13.9 0-14 0-16 2.6zM87 15.2c2.1 7.9 5.5 20.8 7.6 28.8 3.2 12.3 4.3 15 7 17.7 1.9 2 4.2 3.3 5.7 3.3 3.1 0 7.1-3.1 8.5-6.7 1-2.6 15.2-55.6 15.2-56.8 0-.3-2.8-.5-6.2-.3l-6.3.3-5.6 21.5c-3.5 13.6-5.8 20.8-6.2 19.5C105.9 40 96 1.9 96 1.4c0-.2-2.9-.4-6.4-.4h-6.4L87 15.2z"></path></svg>
+      <h3>The JavaScript Iteration Protocols and How They Fit In</h3>
+      <p class="summary">
+        Iterators are one of the most underrated features of ES2015, and
+        they're deeply tied into several other great ES2015 features. Let's
+        dive in!
+      </p>
     </a>
   </section>
 
@@ -47,5 +86,6 @@
     <div class="showoff-card"></div>
     <div class="showoff-card"></div>
   </section>
+
 </body>
 </html>
